Central instance changes for facility service